# m-vis

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  dummy  dummy.rs  scratch.rs  test_mach.rs  test_v.sh
.github/workflows/: release.yml  tests.yml
benches/: memory_overhead.rs  mvis_benchmark.rs
examples/: dummy.rs
scratch_tests/: test_1  test_1.rs
src/: commands.rs  lib.rs  main.rs  scan.rs  tui.rs
src/core/: alloc_trace.rs  mod.rs  scan.rs  stack_trace.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
src/ui/: commands.rs  mod.rs  render.rs  theme.rs  tui.rs
src/utils/: error.rs  formatting.rs  mod.rs  process.rs
tests/: integration_tests.rs
