[package]
name = "mvis"
version = "0.3.0"
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
strsim = "0.11"
libc = "0.2"
rayon = "1.12.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
strip-ansi-escapes = "0.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "mvis_benchmark"
harness = false

[[bench]]
name = "memory_overhead"
harness = false

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",   # VirtualQueryEx lives here
    "Win32_System_Threading",           # OpenProcess, GetCurrentProcess
    "Win32_System_Memory",              # MEMORY_BASIC_INFORMATION, MEM_* consts
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
]

[target.'cfg(target_os = "linux")'.dependencies]
nix = {version = "0.31.2", features = ["ptrace",]}
addr2line = "0.24"
object = "0.36"
memmap2 = "0.9"
gimli     = "0.31"
